Banner overlapping fixed

--- a/style.css
+++ b/style.css
@@ -408,11 +408,24 @@ footer {
   border-bottom: 2px solid #e50914;
   color: #fff;
   text-align: center;
-  padding: 10px 15px;
+  padding: 8px 15px;
   font-size: 13px;
   font-weight: 500;
   z-index: 9999;
   box-shadow: 0 2px 10px rgba(229, 9, 20, 0.3);
+}
+
+@media screen and (max-width: 575.98px) {
+  .demo-banner {
+    padding: 6px 10px;
+    font-size: 11px;
+  }
+
+  .demo-banner a {
+    display: block;
+    margin-top: 2px;
+    margin-left: 0;
+  }
 }
 
 .demo-banner p {
@@ -473,7 +486,13 @@ button:disabled:hover {
 
 /* Offset for fixed banner */
 .main-container {
-  padding-top: 45px;
+  padding-top: 40px;
+}
+
+@media screen and (max-width: 575.98px) {
+  .main-container {
+    padding-top: 55px;
+  }
 }
 
 @media screen and (min-width: 992px) and (max-width: 1199px) {
